--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.8",
     "@tailwindcss/vite": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
